tests/errors/e_tstring6.pyx
# mode: error

# This is split into many sub-files because some errors terminate the parser

t'{1:d
}'

_ERRORS = """
5:6: Unclosed string literal
"""
